# viki-code

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  LICENSE  MANIFEST.in  Makefile  PROOF_REPORT.md  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-proof.yml  ci.yml  package-ghcr.yml  release.yml
BENCHMARK_RESULTS/: final_public_release_live_comparison.json  final_public_release_offline_report.json
BENCHMARK_RESULTS/final_public_release_live_board/: index.md  report.json
IDE_EXTENSION_VSCODE/: README.md  extension.js  package.json
LIVE_RUN_RESULTS/human_install/: commands.json  summary.json
LIVE_RUN_RESULTS/isolation_validation/: commands.json  probe.json  summary.json
LIVE_RUN_RESULTS/public_release/: api_bugfix.json  api_multi_agent.json  api_server_log.json  cli_big_rollout.json  cli_bugfix.json  (+7 more)
scripts/: bootstrap.py  generate_stress_repos.py  install.cmd  install.ps1  install.py  install.sh  run_live_suite.py  run_phase3_api_validation.py  run_public_release_live.py  run_release_closure_live.py  validate_connected_product_clone_live.py  validate_github_clone_live.py  validate_human_install.py  validate_isolation.py  validate_onboarding_clone_live.py
synthetic_stress_repos/: manifest.json
tests/: test_connected_product.py  test_cross_platform_and_skills.py  test_distribution.py  test_integrations.py  test_onboarding.py  test_production_upgrade_pack.py  test_provider_support.py  test_skill_runtime_and_benchmarks.py  test_smoke.py  test_topline_upgrade.py  test_upgrade_features.py  test_worldclass_upgrade.py
viki/: __init__.py  _aiosqlite.py  _log.py  cli.py  config.py  github_connect.py  onboarding.py  platforms.py  product_state.py
(+121 files in other folders)
